--- a/luminalAB/mrna/readme
+++ b/luminalAB/mrna/readme
@@ -1,3 +1,3 @@
 
-brca_luma_vs_lumb_mrna_tmm_311samples.csv : TMM normalized data count matrix for 311 lumA and lumB samples
+brca_luma_vs_lumb_mrna_raw_311samples.csv : raw data count matrix for 311 lumA and lumB samples
 lumAB_id_cancer.txt : sample group file for lumA and lumB samples
